syntax = "proto2";

package server.protobuf.messages;

message RegisteredArrivalsMessage {
    repeated RegisteredArrivalMessage arrivals = 1;
}

message RegisteredArrivalMessage {
    optional string origin = 1;
    optional string destination = 2;
    optional string voyageNumber = 3;
    optional int64 scheduled = 4;
    optional int64 lookedUp = 5;
}
